--- a/front/app/index.html
+++ b/front/app/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="concessionaire-app" ng-strict-di ng-cloak>
+<html ng-app="movies-plus-app" ng-strict-di ng-cloak>
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../public/favicon.ico" type="image/x-icon" />
     <meta name="description" content="" />
-    <title>Concessionaire App</title>
+    <title>Movies Plus App</title>
   </head>
   <body>
     <div id="root-view" ui-view></div>
